--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "build": "echo 'No build step needed for Node.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "seid sualeh mohamed",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.0",
